# cwhap

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/cwhap/: __init__.py  __main__.py  app.py
src/cwhap/models/: __init__.py  agent.py  file_event.py  message.py  session.py
src/cwhap/monitors/: __init__.py  conflict_detector.py
src/cwhap/parsers/: __init__.py  session_parser.py
src/cwhap/styles/: __init__.py  live_monitor.tcss
src/cwhap/watchers/: __init__.py  base.py  session_watcher.py  tail_watcher.py
src/cwhap/widgets/: __init__.py  agent_card.py  conflict_alert.py  file_tree.py  heatmap.py  live_stream.py  sparkline.py  stats_bar.py
tests/: __init__.py
